@startuml
'https://plantuml.com/class-diagram

class DiagnosisUI{
}
class DiagnosisController{
getDiagnosis(report,date)
saveDiagnosis()

}
class DiagnosisStore{
createDiagnosis(report,date,code)
validateDiagnosis(diagnosis)
saveDiagnosis(diagnosis)
}
class Diagnosis{
-report
-date
-code
--------
Diagnosis(report,date,code)
}
DiagnosisUI..>DiagnosisController
DiagnosisController..>DiagnosisStore
DiagnosisController..>Diagnosis
DiagnosisStore"1" --> "*" Diagnosis : adopts
@enduml